--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -3,7 +3,7 @@
 client_id = "461cf2c81050c802a8eb865615750cf1"
 name = "greenlease"
 handle = "greenlease"
-application_url = "https://solo-harder-constitute-positive.trycloudflare.com"
+application_url = "https://sanyo-compilation-ridge-agreed.trycloudflare.com"
 embedded = true
 
 [build]
@@ -13,13 +13,13 @@ include_config_on_deploy = true
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
-scopes = "write_products"
+scopes = "read_checkouts,read_orders,unauthenticated_read_checkouts,unauthenticated_write_checkouts,write_checkouts,write_orders,write_products"
 
 [auth]
 redirect_urls = [
-  "https://solo-harder-constitute-positive.trycloudflare.com/auth/callback",
-  "https://solo-harder-constitute-positive.trycloudflare.com/auth/shopify/callback",
-  "https://solo-harder-constitute-positive.trycloudflare.com/api/auth/callback"
+  "https://sanyo-compilation-ridge-agreed.trycloudflare.com/auth/callback",
+  "https://sanyo-compilation-ridge-agreed.trycloudflare.com/auth/shopify/callback",
+  "https://sanyo-compilation-ridge-agreed.trycloudflare.com/api/auth/callback"
 ]
 
 [webhooks]
