--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -13,7 +13,7 @@ include_config_on_deploy = true
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
-scopes = "read_assigned_fulfillment_orders,read_inventory,read_locations,read_merchant_managed_fulfillment_orders,read_order_edits,read_orders,read_returns,read_shipping,read_themes,read_third_party_fulfillment_orders,write_assigned_fulfillment_orders,write_delivery_customizations,write_fulfillments,write_inventory,write_locations,write_merchant_managed_fulfillment_orders,write_order_edits,write_orders,write_products,write_returns,write_shipping,write_third_party_fulfillment_orders"
+scopes = "read_assigned_fulfillment_orders,write_checkouts,read_inventory,read_locations,read_merchant_managed_fulfillment_orders,read_order_edits,read_orders,read_returns,read_shipping,read_themes,read_third_party_fulfillment_orders,write_assigned_fulfillment_orders,write_delivery_customizations,write_fulfillments,write_inventory,write_locations,write_merchant_managed_fulfillment_orders,write_order_edits,write_orders,write_products,write_returns,write_shipping,write_third_party_fulfillment_orders"
 
 [auth]
 redirect_urls = [
