--- a/package.json
+++ b/package.json
@@ -25,14 +25,15 @@
     "@remix-run/node": "^2.8.1",
     "@remix-run/react": "^2.7.1",
     "@remix-run/serve": "^2.7.1",
-    "@shopify/app": "3.58.2",
-    "@shopify/cli": "3.58.2",
+    "@shopify/app": "3.48.2",
+    "@shopify/cli": "3.48.2",
     "@shopify/polaris": "^12.0.0",
     "@shopify/shopify-api": "^9.5.1",
     "@shopify/shopify-app-remix": "^2.5.0",
     "@shopify/shopify-app-session-storage-prisma": "^4.0.2",
     "isbot": "^5.1.0",
     "prisma": "^5.11.0",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "vite-tsconfig-paths": "^4.3.1"
   },
