--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "type": "module",
   "dependencies": {
+    "react": "18.0.0",
     "@prisma/client": "^5.11.0",
     "@remix-run/dev": "^2.7.1",
     "@remix-run/node": "^2.8.1",
